[package]
name = "g11gkeys"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
posix-errors = "*"
macro-manager = { path = "../macro-manager" }

[build-dependencies]
bindgen = "*"
